--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "prettier": "1.15.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint-config-prettier": "^3.3.0",
     "idb": "^3.0.2",
+    "last.fm.api": "^0.1.3",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7",
