--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,20 @@
 {
-  "extends": ["eslint-config-synacor", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "prettier",
+    "prettier/react"
+  ],
   "parserOptions": {
-    "sourceType": "module"
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
   },
   "rules": {
     "react/jsx-indent-props": [2, 2],
